--- a/assets/icons/icon.scss
+++ b/assets/icons/icon.scss
@@ -7,9 +7,9 @@ $cache-breaker: unique-id();
   font-family: 'ionicons';
   font-style: normal;
   font-weight: normal;
-  src: url('fonts/icon.woff2?rel=#{$cache-breaker}') format('woff2'),
-  url('fonts/icon.woff?rel=#{$cache-breaker}') format('woff'),
-  url('fonts/icon.ttf?rel=#{$cache-breaker}') format('truetype');
+  src: url('fonts/meshviewer.woff2?rel=#{$cache-breaker}') format('woff2'),
+  url('fonts/meshviewer.woff?rel=#{$cache-breaker}') format('woff'),
+  url('fonts/meshviewer.ttf?rel=#{$cache-breaker}') format('truetype');
 }
 
 [class^='ion-'],
@@ -49,3 +49,5 @@ $cache-breaker: unique-id();
 @include icon('arrow-resize', '\f264');
 @include icon('arrow-left-c', '\f108');
 @include icon('arrow-right-c', '\f10b');
+@include icon('full-enter', '\e901');
+@include icon('full-exit', '\e900');
