--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -14,6 +14,8 @@ $color-24ghz: $color-primary !default;
 $color-5ghz: #e3a619 !default;
 $color-others: #0a9c92 !default;
 
+$color-warning: #c20000 !default;
+
 $color-map-background: #f8f4f0 !default;
 
 $font-family: Assistant, sans-serif !default;
