Add ratio & alt attribute to stats images

--- a/scss/modules/_sidebar.scss
+++ b/scss/modules/_sidebar.scss
@@ -29,6 +29,11 @@
     padding-bottom: 15px;
   }
 
+  img {
+    padding: 0 $button-distance 1em;
+    box-sizing: border-box;
+  }
+
   .node-list,
   .node-links,
   .link-list {
